# fluid

./: .gitignore  CMakeLists.txt  CMakeListsROS1.txt  Dockerfile  Doxyfile  Fluid FSM blueprint.md  Jenkinsfile  README.md  Todo  docker-compose.yml  ekf.m  ekf_from_bag.m  package.xml  params.yaml  plot_compared_data_form_files.m  plot_compared_data_from_files.m  plot_data_from_file.m  time_and_distance_error_f.m  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml  push.yml
Documentation/: Actionlib wrapper blueprint.md  Fluid FSM blueprint.md  Mavros link blueprint.md  Operation.md
action/: Land.action  Operation.action  TakeOff.action  land.action  move.action
analyse_tools/: plot_compared_data_from_files.m  time_and_distance_error_f.m
cfg/: Server.cfg
docker/: .bashrc  Dockerfile  entrypoint.sh
documentation/: Actionlib wrapper.md  Flow.md  Fluid FSM blueprint.md  Hybrid controller.md  Operations.md  Path optimizer.md  Type masks.md
documentation/blueprints/: Fluid FSM blueprint.md  Mavros link blueprint.md
include/: edge.h  graph.h  operation.h  state.h  transition.h
include/actionlib/: action_client.h  action_server.h  operation_client.h  operation_server.h
include/core/: core.h  fluid_fsm.h  pose_publisher.h  state.h  status_publisher.h  test_client_fluid.h  transition.h
include/core/operation/: edge.h  graph.h  operation.h  state_graph.h
include/fluid/: LQR.h  PID.h  client.h  config.hpp  controller.h  core.h  data_file.h  data_file.hpp  fluid.h  interact_operation.h  interact_operation.hpp  mast.h  mast.hpp  mavros_interface.h  mavros_state_link.h  operation.h  operation_handler.h  operation_identifier.h  path.h  pose_util.h  server.h  state.h  state_graph.h  state_identifier.h  status_publisher.h  trajectory.h  transition.h  type_mask.h  type_mask_attitude.h  util.h  util.hpp  visualizer.h
include/fluid/controller/: LQR.h  PID.h
include/fluid/controllers/: LQR.h  racing_controller.h
include/fluid/core/: client.h  core.h  identifiable.h  operation.h  operation_client.h  operation_identifier.h  operation_server.h  server.h  state.h  state_graph.h  status_publisher.h  (+2 more)
include/mavros/: mavros_pose_publisher.h  mavros_setpoint_msg_defines.h  mavros_state.h  mavros_state_setter.h  mavros_state_subscriber.h  type_mask.h
include/navigator/: navigator_pose_publisher.h  navigator_state.h
include/operation/: edge.h  graph.h  operation.h  state_graph.h
include/operations/: init_operation.h  land_operation.h  move_operation.h  operation_defines.h  operation_identifier.h  operation_util.h  take_off_operation.h
include/states/: hold_state.h  idle_state.h  init_state.h  land_state.h  move_state.h  position_follow_state.h  state_defines.h  state_identifier.h  state_util.h  take_off_state.h
include/tools/: land_detector.h
launch/: base.launch  base.launch.py  client_ai.launch  client_interval.launch  client_random_movement.launch  client_square.launch  client_tracking.launch  demo.sh  fluid_fsm.launch  pixhawk.launch  server.launch  server_base.launch  server_gazebo.launch  server_pixhawk.launch  server_simulator.launch  simulator.launch  test_ai.launch  test_interval.launch  test_square.launch
rviz_configs/: OA_test.rviz  fluid.rviz
scripts/: airsim.sh  ascendsim.sh  ascendsimV5.sh  gazebo_AP.sh  make_posix_sitl_ekf2.sh  make_px4_sitl_default.sh
src/: LQR.cpp  PID.cpp  client.cpp  client_interval.cpp  client_random_movement.cpp  client_square.cpp  client_tracking.cpp  controller.cpp  core.cpp  data_file.cpp  fluid.cpp  graph.cpp  graph_test.cpp  interact_operation.cpp  main.cpp  mast.cpp  mavros_interface.cpp  mavros_state_link.cpp  off_node.cpp  operation.cpp  operation_handler.cpp  operation_identifier.cpp  path.cpp  random_movement_client.cpp  server.cpp  setpoint_publisher_node.cpp  state.cpp  state_graph.cpp  state_identifier.cpp  status_publisher.cpp  test_client.cpp  test_interval_client.cpp  tracking_client.cpp  tracking_pose_publisher.cpp  trajectory.cpp  transition.cpp  visualizer.cpp  voice_recognition_client.cpp
src/actionlib/: action_client.cpp  action_server.cpp  operation_client.cpp  operation_server.cpp
src/controllers/: LQR.cpp  racing_controller.cpp
src/core/: client.cpp  core.cpp  fluid_fsm.cpp  mavros_state_link.cpp  operation.cpp  operation_client.cpp  operation_server.cpp  server.cpp  state.cpp  state_graph.cpp  status_publisher.cpp  transition.cpp
src/examples/: example_client.cpp  example_client.py  extraction_client.py  follow_reference.cpp  follow_reference.py  model_position_publisher.py  model_publisher.py  safe_follow_reference.cpp  sync_frames.py  takeoff.py
src/mavros/: mavros_pose_publisher.cpp  mavros_state.cpp  mavros_state_setter.cpp  mavros_state_subscriber.cpp
src/navigator/: navigator_pose_publisher.cpp  navigator_state.cpp
src/nodes/: base_link_publisher.cpp  main.cpp  publisher_node.cpp  setpoint_publisher_node.cpp
src/operation/: graph.cpp  operation.cpp  state_graph.cpp
src/operations/: explore_operation.cpp  extract_module_operation.cpp  follow_mast_operation.cpp  hold_operation.cpp  init_operation.cpp  interact_operation.cpp  land_operation.cpp  move_operation.cpp  move_operation_global.cpp  move_oriented_operation.cpp  operation_identifier.cpp  position_follow_operation.cpp  take_off_operation.cpp
src/states/: exploration_state.cpp  explore_state.cpp  extract_module_state.cpp  follow_mast_state.cpp  hold_state.cpp  idle_state.cpp  init_state.cpp  land_state.cpp  move_state.cpp  position_follow_state.cpp  rotate_state.cpp  state_identifier.cpp  take_off_state.cpp
src/test/: client_random_movement.cpp  client_square.cpp  client_tracking.cpp  lqr.py  path_optimizer.py  path_publisher.py  spline_generator.py  test_client.cpp  test_client.py  tracking_pose_publisher.cpp
src/tools/: land_detector.cpp
srv/: Explore.srv  ExtractModule.srv  OperationCompletion.srv  TakeOff.srv  Travel.srv
tests/include/: test_pose_publisher.h  test_state_1.h  test_state_2.h
tests/src/: test_pose_publisher.cpp  test_state_1.cpp  test_state_2.cpp  transition_test.cpp
(+35 files in other folders)
