<?xml version="1.0"?>
<package>
    <name>fluid</name>
    <version>2.1.0</version>
    <description>Finite state machine built on top of PX4 and Mavros</description>

    <maintainer email="simen.gangstad@ascendntnu.com">Simen Gangstad</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ascend_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>ascend_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
</package>
