<?xml version="1.0"?>
<package>
    <name>fluid</name>
    <version>3.0.0</version>
    <description>Finite state machine built around the Mavros protocol</description>

    <maintainer email="simen.gangstad@ascendntnu.com">Simen Gangstad</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>ascend_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>message_runtime</run_depend>
    <run_depend>ascend_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_geometry_msgs</run_depend>
    <run_depend>ekf</run_depend>
    <run_depend>fh_interface</run_depend>
</package>
